2002-06-08  Victor Porton  <porton@localhost>

	* fixed src/main/commentary.c: crashed displaying the commentary
	when no commentary

	* fixed src/main/gs_interlinear.c: again works when not all
	interlinear modules are present

2002-06-06  Terry Biggs <tbiggs@users.sourceforge.net>

	* added frame label to docked interlinear and studypad to
	  give a more uniform look.
	


2002-06-05  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gnome/_bibletext_view.* to gnome/bibletext_dialog.*
	* removed main/bibletext_view.*


2002-06-04  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gnome/create_shortcutbar_search.* to gnome/shortcutbar_search.*
	* moved main/gs_shortcutbar.* to gnome/shortcutbar_main.*
	* added function headers to shortcutbar files
	* moved main/gs_viewcomm_dlg.* to gnome/commentary_dialog.*
	* moved main/gs_viewdict_dlg.* to gnome/dictlex_dialog.*
	

2002-06-03  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gnome/create_shortcutbar_viewer.* to gnome/shortcutbar_viewer.*


2002-05-21  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved create percomm control code from gnome/_editor.c
	  to gnome/_percomm.c
	* moved create studypad control code from gnome/_editor.c
	  to gnome/studypad.c


2002-05-17  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/gs_gui_cb.*
	* added gnome/toolbar_nav.*
	* removed main/gs_getinfo_dlg.* - was not used
	* renamed main/gs_information_dlg.* to main/display_info.*
	* renamed backend/display_info.* to backend/display_info_.* 
	* added gnome/_display_info.*


2002-05-16  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/gs_editor.* all the functions moved to other files
	* added gnome/studypad.*
	

2002-05-15  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved main/gs_editor_replace.* to gnome/editor_replace.*
	* moved main/gs_editor_search.* to gnome/gs_editor_search.*
	* moved main/gs_editor_toolbar.* to gnome/editor_toolbar.*
	
